sorting the conflicts

--- a/Source/src.html
+++ b/Source/src.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
- <div class="1" id="RT Concept"> dfdfhdfh</div>
-<div class="1" id="RT Concept"> dfdfhdfh</div>
+    <div class="header" id="maslulim_categories_by_xpath">//*[@id=\"primar-menu\"]/li[7]/ul/li</div>
+    <div class="header" id="maslulim_by_xpath">//*[@id='primar-menu']/li[@class='nav-item dropdown ml-2'][2]</div>
 </body>
 </html>
